--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ mybatis.type-aliases-package=com.birthday.aisen.mapper
 mybatis.mapper-locations=classpath*:/mybatis/*Mapper.xml
 
 server.port=8086
-spring.datasource.url=jdbc:mysql://172.16.68.37:3306/zhaopin?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=true&allowMultiQueries=true&serverTimezone=Asia/Hong_Kong
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aisen?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=true&allowMultiQueries=true&serverTimezone=Asia/Hong_Kong
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=baidu@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
