--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aisen?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=baidu@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
