--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 mybatis.type-aliases-package=com.birthday.aisen.mapper
 mybatis.mapper-locations=classpath*:/mybatis/*Mapper.xml
+
+server.port=8086
+
+spring.session.store-type=redis
+spring.session.redis.namespace=spring:aisen:session
